--- a/parte-2/parte-2/package.json
+++ b/parte-2/parte-2/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@tailwindcss/vite": "^4.1.12",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "lucide-react": "^0.541.0",
+    "node-fetch": "^3.3.2",
+    "prisma": "^6.14.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "tailwindcss": "^4.1.12",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
